feat: Dosya Yöneticisi modülü ve Parola Yöneticisi iyileştirmeleri
✨ Yeni Özellikler:
- Dosya Karşılaştırıcı (Diff) modülü eklendi
  - Satır/sözcük/karakter bazında karşılaştırma
  - Dosya veya manuel metin girişi desteği
  - Boşluk ve büyük/küçük harf duyarsız modlar
  - Detaylı istatistikler (eklenen/silinen/değiştirilen satırlar)

- Toplu Dosya Yeniden Adlandırıcı eklendi
  - Sıralı numaralama desteği
  - Tarih/zaman ekleme (çoklu format)
  - Regex ile metin değiştirme
  - Özel şablon desteği ({name}, {date}, {n}, {ext})
  - Önizleme ve güvenlik kontrolleri

🔧 Parola Yöneticisi İyileştirmeleri:
- CSV ile dışa/içe aktarma özelliği
- Kategorilerin de export/import edilmesi
- Tümünü sil butonunda kategorileri de silme
- FOREIGN KEY hata düzeltmesi (içe aktarmada kategori kontrolü)
- Kategori mevcut değilse otomatik 'Genel' kategorisine atama

🐛 Hata Düzeltmeleri:
- PasswordDatabaseService: AddPasswordEncrypted metodu eklendi
- System.Windows.Forms referans uyumluluğu sağlandı

--- a/SwissKnifeApp.csproj
+++ b/SwissKnifeApp.csproj
@@ -48,4 +48,8 @@
     <PackageReference Include="ZXing.Net.Bindings.Windows.Compatibility" Version="0.16.13" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Reference Include="System.Windows.Forms" />
+  </ItemGroup>
+
 </Project>
