--- a/SwissKnifeApp.csproj
+++ b/SwissKnifeApp.csproj
@@ -28,6 +28,7 @@
     <PackageReference Include="CommunityToolkit.Mvvm" Version="8.4.0" />
     <PackageReference Include="EPPlus" Version="8.2.1" />
     <PackageReference Include="HBMoneyToWords" Version="1.0.0" />
+    <PackageReference Include="HtmlAgilityPack" Version="1.12.4" />
     <PackageReference Include="iTextSharp" Version="5.5.13.4" />
     <PackageReference Include="LucideIcons" Version="1.0.0.5" />
     <PackageReference Include="MahApps.Metro" Version="2.4.11" />
@@ -42,6 +43,7 @@
     <PackageReference Include="PDFsharp" Version="6.2.2" />
     <PackageReference Include="QRCoder" Version="1.7.0" />
     <PackageReference Include="SixLabors.ImageSharp" Version="3.1.11" />
+    <PackageReference Include="SixLabors.ImageSharp.Drawing" Version="2.1.7" />
     <PackageReference Include="SpeedTest.Net" Version="1.3.0" />
     <PackageReference Include="SpeedTest.NetCore" Version="2.1.0" />
     <PackageReference Include="ZXing.Net" Version="0.16.10" />
